--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -1,6 +1,7 @@
 /***** General *****/
 h1 {
   font-family: "Shrikhand", sans-serif;
+  font-weight: 300;
 }
 
 h2, h3, h4, h5, h6, p {
@@ -8,13 +9,13 @@ h2, h3, h4, h5, h6, p {
 }
 
 h2 {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 1.2rem;
+  font-weight: 400;
 }
 
 h3 {
-  font-size: 1.125rem;
-  font-weight: bold;
+  font-size: 1.3rem;
+  font-weight: medium;
 }
 
 h4 {
@@ -32,5 +33,136 @@ header a {
 }
 
 /***** Intro *****/
+.intro__img {
+  height: 375px;
+  background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.carte {
+  margin-top: -75px;
+  background-color: #F6F6F6;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
+.carte .intro {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+  padding-top: 40px;
+  padding-bottom: 37px;
+}
+.carte .intro .intro__title {
+  font-size: 28px;
+}
+.carte .intro .menu__heart {
+  padding-right: 40px;
+  position: relative;
+  margin-top: 13px;
+}
+.carte .intro .menu__heart .fa-regular {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 1;
+}
+.carte .intro .menu__heart .fa-solid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  opacity: 0;
+  transition: opacity 250ms ease-in-out;
+}
+.carte .intro .menu__heart .fa-solid:hover {
+  opacity: 1;
+}
+.carte .intro .menu__heart .fa-regular:hover {
+  opacity: 0;
+}
+.carte .intro .menu__heart .fa-regular::before {
+  background-image: linear-gradient(356deg, black 0%, black 100%);
+  background-clip: text;
+  color: rgba(0, 0, 0, 0.2);
+}
+.carte .intro .menu__heart .fa-solid::before {
+  background-image: linear-gradient(356deg, #FF79DA 0%, #9356DC 100%);
+  background-clip: text;
+  color: rgba(0, 0, 0, 0.2);
+}
+.carte .menu {
+  padding: 13px;
+}
+.carte .menu__all {
+  display: grid;
+  gap: 12px;
+  padding-bottom: 40px;
+  margin: auto;
+  max-width: 634px;
+}
+.carte .menu__all .menu__title {
+  border-bottom: 4px #99E2D0 solid;
+  padding-bottom: 6px;
+  width: 50px;
+}
+.carte .menu__all .menu__step {
+  padding: 12px 15px;
+  background-color: white;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-between;
+}
+.carte .menu__all .menu__step .menu__txt {
+  gap: 10px;
+  display: grid;
+}
+.carte .menu__all .menu__step .menu__price {
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+/***** Commandez *****/
+.order {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
+}
+.order .link__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  text-decoration: none;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(356deg, #9356DC 0%, #FF79DA 100%);
+  color: white;
+  height: 50px;
+  width: 186px;
+  font-weight: 500;
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+  position: relative;
+  z-index: 1;
+}
+.order .link__button:hover::after {
+  opacity: 1;
+}
+.order .link__button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 25px;
+  background-color: rgba(255, 255, 255, 0.25);
+  z-index: -1;
+  transition: opacity 500ms;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
 
 /*# sourceMappingURL=restaurant.css.map */
