--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,4 @@
+/***** General *****/
 /***** Footer *****/
 footer {
   background-color: #353535;
@@ -21,6 +22,7 @@ footer .links__all {
   display: flex;
   flex-direction: column;
   align-items: normal;
+  gap: 7px;
   /***** Mobile *****/
   /***** Mobile *****/
 }
@@ -34,6 +36,7 @@ footer .links__all .footer__links {
   display: flex;
   flex-direction: column;
   margin-right: 40px;
+  gap: 7px;
   /***** Mobile *****/
   /***** Mobile *****/
 }
