--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ a {
 }
 .function__all h2 {
   padding-bottom: 30px;
-  margin-right: 10px;
+  margin-left: -10px;
 }
 .function__all .function__steps {
   display: grid;
@@ -184,6 +184,7 @@ a {
   width: 100%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+  background-position: center;
 }
 .restaurants__all .restaurants__cards .card .restaurants__img--first {
   background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
@@ -196,6 +197,7 @@ a {
   padding-top: 10px;
   padding-right: 10px;
   box-sizing: border-box;
+  background-position: center;
 }
 .restaurants__all .restaurants__cards .card .restaurants__img--second {
   background-image: url(../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
@@ -208,6 +210,7 @@ a {
   padding-top: 10px;
   padding-right: 10px;
   box-sizing: border-box;
+  background-position: center;
 }
 .restaurants__all .restaurants__cards .card .new {
   display: flex;
