--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -1,3 +1,4 @@
+/***** General *****/
 $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
@@ -27,7 +28,8 @@ footer {
           display:flex;
           flex-direction: column;
           align-items: normal;
-           
+          gap:7px;
+
           /***** Mobile *****/
           @media screen and (min-width: 768px) {
                display: flex;
@@ -39,6 +41,7 @@ footer {
                display: flex;
                flex-direction: column;
                margin-right: 40px;
+               gap: 7px;
 
                /***** Mobile *****/
                @media screen and (min-width: 768px) {
