--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,6 +205,7 @@ a {
                     width: 100%;
                     border-top-left-radius: 20px;
                     border-top-right-radius: 20px;
+                    background-position: center;
 
                     &--first {
                         background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
@@ -217,6 +218,7 @@ a {
                         padding-top: 10px;
                         padding-right: 10px;
                         box-sizing: border-box;
+                        background-position: center;
                     }
 
                     &--second {
@@ -230,6 +232,7 @@ a {
                         padding-top: 10px;
                         padding-right: 10px;
                         box-sizing: border-box;
+                        background-position: center;
                     }
                 }
 
