--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -39,12 +39,17 @@ header a {
   background-position: center;
   background-size: cover;
 }
+@media screen and (min-width: 768px) {
+  .intro__img {
+    height: 383px;
+  }
+}
 
 .carte {
   margin-top: -75px;
   background-color: #F6F6F6;
-  border-top-left-radius: 50px;
-  border-top-right-radius: 50px;
+  border-top-left-radius: 40px;
+  border-top-right-radius: 40px;
 }
 .carte .intro {
   display: flex;
