--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -62,6 +62,12 @@ header a {
     border-top-left-radius: 40px;
     border-top-right-radius: 40px;
 
+    @media screen and (min-width: 768px) {
+        margin: auto;
+        width: 60%;
+        margin-top: -77px;
+    }
+
     .intro {
         display: flex;
         flex-direction: row;
