--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -134,10 +134,6 @@ header a {
             margin: auto;
             max-width: 634px;
 
-            @media screen and (min-width: 768px) {
-                
-            }
-
             .menu__title {
                 border-bottom: 4px $line-bg solid;
                 padding-bottom: 6px;
@@ -150,19 +146,49 @@ header a {
                 border-radius: 15px;
                 display: flex;
                 justify-content: space-between;
+                position: relative;
+                overflow: hidden;
 
                 .menu__txt {
                     gap: 10px;
                     display: grid;
                 }
-    
+
                 .menu__price {
                     font-weight: bold;
                     margin-top: 30px;
-                }
+                }  
             }
         }
     }
+}
+
+/***** Animation Validation *****/
+.validation {
+    position: absolute;
+    top: 50%;
+    right: -68px;
+    transform: translateY(-50%);
+    background-color: $line-bg;
+    padding: 45px 18px;
+    transition: all 0.2s ease-in-out;
+
+    .validation__check {
+        font-size:24px;
+        color:white;
+    }
+}
+  
+.menu__step:hover .validation {
+    right: 0;
+}
+  
+.menu__price {
+    transition: margin-right 0.2s ease-in-out;
+}
+  
+.menu__step:hover .menu__price {
+    margin-right: 60px;
 }
 
 
