loader in progress

--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -135,17 +135,19 @@ header a {
 }
 .carte .menu__all .menu__step .menu__price {
   font-weight: bold;
-  margin-top: 30px;
+  display: flex;
+  align-items: end;
 }
 
 /***** Animation Validation *****/
 .validation {
   position: absolute;
-  top: -30%;
-  right: -68px;
+  top: 50%;
+  right: -60px;
   background-color: #99E2D0;
-  padding: 45px 18px;
+  padding: 70px 18px;
   transition: all 0.25s ease-in-out;
+  transform: translateY(-50%);
 }
 .validation .validation__check {
   font-size: 24px;
