--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -156,7 +156,8 @@ header a {
 
                 .menu__price {
                     font-weight: bold;
-                    margin-top: 30px;
+                    display: flex;
+                    align-items: end;
                 }  
             }
         }
@@ -166,11 +167,12 @@ header a {
 /***** Animation Validation *****/
 .validation {
     position: absolute;
-    top: -30%;
-    right: -68px;
+    top: 50%;
+    right: -60px;
     background-color: $line-bg;
-    padding: 45px 18px;
+    padding: 70px 18px;
     transition: all 0.25s ease-in-out;
+    transform: translateY(-50%);
 
     .validation__check {
         font-size:24px;
