--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -141,7 +141,6 @@ header a {
             }
 
             .menu__step{
-                padding: 12px 15px;
                 background-color: white;
                 border-radius: 15px;
                 display: flex;
@@ -152,13 +151,19 @@ header a {
                 .menu__txt {
                     gap: 10px;
                     display: grid;
+                    padding: 12px 0px 12px 15px;
                 }
-
-                .menu__price {
-                    font-weight: bold;
+                .menu__animation--validation{
                     display: flex;
-                    align-items: end;
-                }  
+
+                    .menu__price {
+                        font-weight: bold;
+                        display: flex;
+                        align-items: end;
+                        padding-bottom: 12px;
+                        padding-right: 15px;
+                    }
+                }                 
             }
         }
     }
@@ -166,13 +171,12 @@ header a {
 
 /***** Animation Validation *****/
 .validation {
-    position: absolute;
-    top: 50%;
-    right: -60px;
-    background-color: $line-bg;
-    padding: 70px 18px;
+    background-color: #99E2D0;
     transition: all 0.25s ease-in-out;
-    transform: translateY(-50%);
+    width: 0px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 
     .validation__check {
         font-size:24px;
@@ -181,20 +185,9 @@ header a {
 }
   
 .menu__step:hover .validation {
-    right: 0;
+    width: 64px;
 }
   
-.menu__price {
-    transition: margin-right 0.25s ease-in-out;
-}
-  
-.menu__step:hover .menu__price {
-    margin-right: 60px;
-}
-
-
-
-
 
 /***** Commandez *****/
 .order {
