--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -121,7 +121,6 @@ header a {
   width: 50px;
 }
 .carte .menu__all .menu__step {
-  padding: 12px 15px;
   background-color: white;
   border-radius: 15px;
   display: flex;
@@ -132,22 +131,27 @@ header a {
 .carte .menu__all .menu__step .menu__txt {
   gap: 10px;
   display: grid;
+  padding: 12px 0px 12px 15px;
 }
-.carte .menu__all .menu__step .menu__price {
+.carte .menu__all .menu__step .menu__animation--validation {
+  display: flex;
+}
+.carte .menu__all .menu__step .menu__animation--validation .menu__price {
   font-weight: bold;
   display: flex;
   align-items: end;
+  padding-bottom: 12px;
+  padding-right: 15px;
 }
 
 /***** Animation Validation *****/
 .validation {
-  position: absolute;
-  top: 50%;
-  right: -60px;
   background-color: #99E2D0;
-  padding: 70px 18px;
   transition: all 0.25s ease-in-out;
-  transform: translateY(-50%);
+  width: 0px;
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
 .validation .validation__check {
   font-size: 24px;
@@ -155,15 +159,7 @@ header a {
 }
 
 .menu__step:hover .validation {
-  right: 0;
-}
-
-.menu__price {
-  transition: margin-right 0.25s ease-in-out;
-}
-
-.menu__step:hover .menu__price {
-  margin-right: 60px;
+  width: 64px;
 }
 
 /***** Commandez *****/
