truncate txt menu

--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -125,13 +125,17 @@ header a {
   border-radius: 15px;
   display: flex;
   justify-content: space-between;
-  position: relative;
   overflow: hidden;
 }
 .carte .menu__all .menu__step .menu__txt {
   gap: 10px;
   display: grid;
   padding: 12px 0px 12px 15px;
+}
+.carte .menu__all .menu__step .menu__txt .truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .carte .menu__all .menu__step .menu__animation--validation {
   display: flex;
@@ -144,6 +148,7 @@ header a {
   padding-right: 15px;
 }
 
+/***** Animation menu_all *****/
 /***** Animation Validation *****/
 .validation {
   background-color: #99E2D0;
