--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -35,7 +35,6 @@ header a {
 /***** Intro *****/
 .intro__img {
   height: 375px;
-  background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -43,6 +42,22 @@ header a {
   .intro__img {
     height: 383px;
   }
+}
+
+.img__palette {
+  background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+}
+
+.img__note {
+  background-image: url(../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+}
+
+.img__francaise {
+  background-image: url(../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+}
+
+.img__delice {
+  background-image: url(../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
 }
 
 .carte {
