--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -46,14 +46,29 @@ header a {
 
 /***** Intro *****/
 .intro__img {
-    height: 375px;
-    background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+    height: 375px;    
     background-position: center;
     background-size: cover;
     
     @media screen and (min-width: 768px) {
         height: 383px;
     }
+}
+ 
+.img__palette {
+    background-image: url(../images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg);
+}
+
+.img__note {
+    background-image: url(../images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg);
+}
+
+.img__francaise {
+    background-image: url(../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg);
+}
+
+.img__delice {
+    background-image: url(../images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg);
 }
 
 .carte {
