loader in progress

--- a/css/loader.css
+++ b/css/loader.css
@@ -1,3 +1,64 @@
+/* HTML: <div class="loader"></div> */
+body {
+  position: relative;
+}
 
+.loader-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  background-color: white;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: l2 3s ease-out forwards;
+}
+
+.loader {
+  width: 35px;
+  height: 80px;
+  position: relative;
+}
+
+.loader:after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  padding: 3px 5px;
+  border-top: 1px solid #bbb6aa;
+  border-bottom: 4px solid #bbb6aa;
+  background: linear-gradient(#612329 0 0) bottom no-repeat content-box, #e4e0d7;
+  mix-blend-mode: darken;
+  animation: l1 1.5s infinite linear;
+}
+
+.loader:before {
+  content: "";
+  position: absolute;
+  inset: -18px calc(50% - 2px) 8px;
+  background: #eb6b3e;
+  transform-origin: bottom;
+  transform: rotate(8deg);
+}
+
+@keyframes l1 {
+  0% {
+    background-size: 100% 100%;
+  }
+  100% {
+    background-size: 100% 5%;
+  }
+}
+@keyframes l2 {
+  0% {
+    display: flex;
+  }
+  100% {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=loader.css.map */
