--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -139,6 +139,7 @@ header a {
         }
     }
 
+/***** Menu *****/
     .menu {
         padding:13px;
 
@@ -189,6 +190,7 @@ header a {
         }
     }
 }
+
 /***** Animation Apparition menu_all *****/
 $anim-dur: 1000ms;
 $num-menu: 3;
