--- a/css/loader.css
+++ b/css/loader.css
@@ -1,4 +1,4 @@
-/* HTML: <div class="loader"></div> */
+/***** General *****/
 body {
   position: relative;
 }
@@ -8,12 +8,9 @@ body {
   left: 0;
   top: 0;
   right: 0;
-  height: 100vh;
+  bottom: 0;
   background-color: white;
   z-index: 5;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   animation: l2 3s ease-out forwards;
 }
 
@@ -21,6 +18,9 @@ body {
   width: 35px;
   height: 80px;
   position: relative;
+  top: 50%;
+  left: 50%;
+  position: fixed;
 }
 
 .loader:after {
@@ -30,7 +30,7 @@ body {
   padding: 3px 5px;
   border-top: 1px solid #bbb6aa;
   border-bottom: 4px solid #bbb6aa;
-  background: linear-gradient(#612329 0 0) bottom no-repeat content-box, #e4e0d7;
+  background: linear-gradient(#FF79DA 0 0) bottom no-repeat content-box, #e4e0d7;
   mix-blend-mode: darken;
   animation: l1 1.5s infinite linear;
 }
@@ -39,7 +39,7 @@ body {
   content: "";
   position: absolute;
   inset: -18px calc(50% - 2px) 8px;
-  background: #eb6b3e;
+  background: #99E2D0;
   transform-origin: bottom;
   transform: rotate(8deg);
 }
