--- a/sass/loader.scss
+++ b/sass/loader.scss
@@ -1,15 +1,4 @@
-/***** General *****/
-$primary-color: #9356DC;
-$secondary-color: #FF79DA;
-$tertiary-color: #99E2D0;
-$bg-color: #F6F6F6;
-$header-bg: #EAEAEA;
-$new-bg:#99E2D0;
-$new-font-color:#008766;
-$subtitle-font: 300;
-$place-font:200;
-$button-font: 500;
-
+/* HTML: <div class="loader"></div> */
 body {
     position: relative;
 }
@@ -19,9 +8,12 @@ body {
     left: 0;
     top: 0;
     right: 0;
-    bottom:0;
+    height:100vh;
     background-color: white;
     z-index: 5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     animation: l2 3s ease-out forwards;
 }
 
@@ -29,9 +21,6 @@ body {
     width: 35px;
     height: 80px;
     position: relative;
-    top:50%;
-    left:50%;
-    position:fixed
   }
   .loader:after {
     content: "";
@@ -41,7 +30,7 @@ body {
     border-top: 1px solid #bbb6aa;
     border-bottom: 4px solid #bbb6aa;
     background: 
-    linear-gradient($secondary-color 0 0) bottom no-repeat content-box, 
+    linear-gradient(#612329 0 0) bottom no-repeat content-box, 
     #e4e0d7;
     mix-blend-mode: darken;
     animation: l1 1.5s infinite linear;
@@ -50,7 +39,7 @@ body {
     content: "";
     position: absolute;
     inset: -18px calc(50% - 2px) 8px;
-    background: $tertiary-color;   
+    background: #eb6b3e;   
     transform-origin: bottom;
     transform: rotate(8deg);
   }
