--- a/css/restaurant.css
+++ b/css/restaurant.css
@@ -15,12 +15,10 @@ h2 {
 
 h3 {
   font-size: 1.3rem;
-  font-weight: medium;
 }
 
 h4 {
   font-size: 1rem;
-  font-weight: medium;
 }
 
 a {
@@ -65,6 +63,7 @@ header a {
   background-color: #F6F6F6;
   border-top-left-radius: 40px;
   border-top-right-radius: 40px;
+  /***** Menu *****/
 }
 @media screen and (min-width: 768px) {
   .carte {
